--- a/Marketplace/Marketplace.csproj
+++ b/Marketplace/Marketplace.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Marketplace.Domain\Marketplace.Domain.csproj" />
+    <ProjectReference Include="..\Marketplace.Framework\Marketplace.Framework.csproj" />
+  </ItemGroup>
+
 </Project>
